--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,15 +4,15 @@ spring.jpa.hibernate.ddl-auto=update
 #none for liquibase
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-spring.datasource.url = jdbc:mysql://localhost:3306/pawelo?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = Test123
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.maxActive=10
-spring.datasource.maxIdle=5
-spring.datasource.minIdle=2
-spring.datasource.initialSize=5
-spring.datasource.removeAbandoned=true
+#spring.datasource.url = jdbc:mysql://localhost:3306/pawelo?useSSL=false
+#spring.datasource.username = root
+#spring.datasource.password = Test123
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.maxActive=10
+#spring.datasource.maxIdle=5
+#spring.datasource.minIdle=2
+#spring.datasource.initialSize=5
+#spring.datasource.removeAbandoned=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57InnoDBDialect
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
@@ -22,3 +22,14 @@ spring.mail.username=orina18042005@gmail.com
 spring.mail.password=Orina180420051
 spring.mail.port=587
 spring.mail.smtp.auth=true
+
+spring.datasource.url=${JDBC_DATABASE_URL}
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
+# Keep the connection alive if idle for a long time (needed in production)
+spring.datasource.testWhileIdle = true
+spring.datasource.validationQuery = SELECT 1
